# dqm3_fusion_recipe_generator

./: Cargo.toml  index.html
.github/workflows/: github-pages.yml  test.yml
public/: main.css
src/: data.rs  main.rs  recipe.rs
src/components/: cards.rs  controller_view.rs  mod.rs  monster_input.rs  monster_list.rs  monster_list_item.rs  monster_list_view.rs  monster_scoutable_selection.rs  monster_tree.rs  monster_tree_arrow.rs  monster_tree_node.rs  monster_tree_view.rs  select.rs
src/data/: area.json  family.json  lang.json  monster.json  rank.json  season.json
