[package]
name = "dqm3_fusion_recipe_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.66"
log = "0.4.20"
serde = "1.0.193"
serde_json = "1.0.108"
wasm-bindgen = "0.2.89"
wasm-logger = "0.2.0"

[dependencies.yew]
version = "0.21.0"
features = [
    "csr",
]

[dependencies.web-sys]
version = "0.3.66"
features = [
    "HtmlInputElement",
]
